<resources>
    <string name="app_name">创聊</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="email">邮箱</string>
    <string name="username">用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="input_error_tip1">请输入Email</string>
    <string name="input_error_tip2">请输入密码</string>
    <string name="input_error_tip3">请输入正确的Email</string>
    <string name="input_error_tip4">密码长度错误，不能小于6位</string>
    <string name="input_error_tip5">请输入用户名</string>
    <string name="input_error_tip6">请输入正确的用户名（英文；数字；汉字）</string>
    <string name="change">修改</string>
    <string name="center">个人中心</string>
    <string name="not_support">暂不支持</string>
    <string name="welcome">欢迎使用创聊！</string>
    <string name="home_menu1">单人即时翻译</string>
    <string name="home_menu2">创建多人聊天翻译</string>
    <string name="home_menu3">加入多人聊天翻译</string>
    <string name="send">发送</string>
    <string name="change_pwd">修改密码</string>
    <string name="version">版本说明</string>
    <string name="setting">设置</string>

    <string name="input_hint1">请输入您的旧密码</string>
    <string name="input_hint2">请输入您的新密码</string>
    <string name="input_hint3">请再次输入您的新密码</string>
    <string name="confirm">确认</string>

    <string name="single_chat_tip">请开始讲话</string>
    <string name="language_choose">语言选择</string>
    <string name="room_choose">房间选择</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="input_join_roomid">请输入您要加入的房间ID号</string>
    <string name="register_ok">注册成功</string>
    <string name="login_fail">邮箱或密码输入错误</string>

    <string name="change_pwd_input_error_tip1">请输入旧密码</string>
    <string name="change_pwd_input_error_tip2">请输入新密码</string>
    <string name="change_pwd_input_error_tip3">请输入确认新密码</string>
    <string name="change_pwd_input_error_tip4">新密码长度错误，不能小于6位</string>
    <string name="change_pwd_input_error_tip5">两次新密码输入不一致</string>
    <string name="change_pwd_fail">旧密码错误,修改失败</string>
    <string name="logout">登出</string>

</resources>
