<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bg_white"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/iv_logo"
            android:src="@mipmap/ic_home_logo"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/tv_title"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_larger"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_logo"
            android:layout_toEndOf="@+id/iv_logo" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/iv_setting"
            android:src="@mipmap/ic_settings"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/iv_user"
            android:src="@mipmap/ic_user"
            android:layout_marginRight="19dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/iv_setting"
            android:layout_toStartOf="@+id/iv_setting" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/textView4"
        android:textColor="@color/text_black2"
        android:textSize="@dimen/text_size_largest"
        android:layout_marginTop="116dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llyt_menu1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/bg_green"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_menu1"
                android:id="@+id/textView5"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_large"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyt_menu2"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/bg_navy"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_menu2"
                android:id="@+id/textView6"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_large"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyt_menu3"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/bg_blue"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_menu3"
                android:id="@+id/textView7"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_large"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>