<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/bg_white"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_title_bar"
        layout="@layout/view_title_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/shap_bg_gray"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="20dp"
        android:layout_height="180dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:layout_height="59dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/imageView3"
                android:src="@mipmap/ic_email"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:hint="@string/email"
                android:textColorHint="@color/hint_text"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal"
                android:layout_marginLeft="12dp"
                android:ems="10"
                android:id="@+id/ed_email"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line"
             />

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:layout_height="59dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/imageView4"
                android:src="@mipmap/ic_password"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:background="@null"
                android:hint="@string/input_pwd"
                android:textColorHint="@color/hint_text"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal"
                android:layout_marginLeft="12dp"
                android:maxLength="16"
                android:ems="10"
                android:id="@+id/ed_pwd"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bg_blue"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size_large"
            android:text="@string/login"
            android:id="@+id/btn_login" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"
        android:id="@+id/tv_forget"
        android:textColor="@color/text_blue"
        android:textSize="@dimen/text_size_small"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>